# merkle-root

./: .gitignore  Cargo.toml  LICENSE  README.md
merk/src/merk/: mod.rs
src/: account.rs  main.rs
