[package]
name = "merkle-root"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# merk = "1.0.1"
merk = { path = "./merk" }
#rs_merkle = "1.2"
#sparse-merkle-tree = "0.5.3"
#blake2b-rs = "0.2.0"
ed25519-dalek = "1.0.1"
serde = { version="1.0.130", features = ["derive"] }
serde_json = "1.0.67"
rand = "0.7.3"
hex = "0.4.3"
memmap2 = "0.5.7"
# rand = "0.8.5"

